--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ html::-webkit-scrollbar-track {
 }
 
 html::-webkit-scrollbar-thumb {
-  background: crimson;
+  background: #ff2d75;
   border-radius:2rem;
 }
 
@@ -198,8 +198,8 @@ header ul li a.choise_link
 
 /******* SERVICE *******/
 #service{
-  height: 100vh;
- 
+  height: 100%;
+  position: relative;
 }
 
 .titre_service h2{
@@ -242,8 +242,8 @@ header ul li a.choise_link
 
 .box.green:hover{
   background-color: #08da4e;
-
 }
+
 
 .box.red{
   border-bottom:3px solid #e9222c;
@@ -263,6 +263,49 @@ header ul li a.choise_link
   background-color: #b50edf;
 }
 
+.box h3{
+  font-size: 18px;
+}
+
+.box .description{
+  font-size: 15px;
+  font-weight: 400;
+}
+
  .box:hover  {
   color: #fff!important;
+}
+/********************************************/
+
+/*****  footer */
+footer{
+    background-color: #000;
+    position: relative;
+    padding-bottom: 0;
+    height: 100%;
+}
+
+footer .info{
+  color: #fff;
+}
+
+footer .all_link a{
+  color: #fff !important;
+}
+footer .all_link :hover{
+  color: #b50edf;
+  transition: 0.3s;
+}
+
+.line{
+    width: 100%;
+    max-width: 100%;
+    height: 0.25rem;
+    background-color: #2c3e50;
+    border-radius: 1rem;
+    border-color: #2c3e50;
+}
+
+.end-footer {
+  color: #fff;
 }
