--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,7 +276,40 @@ header ul li a.choise_link
   color: #fff!important;
 }
 /********************************************/
+/*** count ****/
+.box_count{
+  padding:70px 0 60px;
+}
 
+.box_count{
+  display: flex;
+  align-items: center;
+  padding: 30px;
+  width: 100%;
+  background: #fff;
+  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+}
+
+.box_count i{
+font-size: 35px;
+line-height: 0;
+margin-right: 20px;
+color: #4154f1;
+}
+
+.box_count span{
+  font-size: 30px;
+  display: block;
+  font-weight: 600;
+  color: #0b198f;
+}
+.box_count p{
+padding: 0;
+margin: 0;
+font-family: "Nunito", sans-serif;
+font-size: 14px;
+}
+/************************/
 /*****  footer */
 footer{
     background-color: #000;
