--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,7 +150,7 @@ header{
   background-attachment: fixed;
 }
 
-header ul li a{
+header .navbar-nav li a{
  /* */
  display: flex;
  align-items: center;
@@ -158,7 +158,7 @@ header ul li a{
  position: relative;
  font-size: 18px;
  font-weight: 700;
- color: #4fc3dc;
+ color: #4fc3dc ;
   transition: 0.3s;
 }
 
@@ -194,7 +194,7 @@ header ul li a.choise_link
   }
 }
 
-.btn{
+.button{
   display: inline-block;
   padding:10px 10px;
   border:.2rem solid #ff2d75;
@@ -208,7 +208,7 @@ header ul li a.choise_link
   margin-top: 1rem;
 }
 
-.btn::before{
+.button::before{
   content: '';
   position: absolute;
   top:0; right: 0;
@@ -219,12 +219,12 @@ header ul li a.choise_link
   z-index: -1;
 }
 
-.btn:hover::before{
+.button:hover::before{
   width:100%;
   left: 0;
 }
 
-.btn:hover{
+.button:hover{
   color:#fff;
 }
 
@@ -352,23 +352,24 @@ font-size: 14px;
 .thank{
   background:url(../image/hero-bg.png);
 }
+
 .container_box{
-  width: 250px;
+  width: 200px !important;
   height: 190px;
+  margin: 0px 70px;
   background: linear-gradient(60deg,#000,#434343);
   border-radius: 20%;
   box-shadow: rgba(0,0,0,.7) 0px 4px 12px;
 }
 
 .container_box .card_box{
-  width: 250px;
+  width: 200px;
   height: 190px;
   z-index: 1;
   margin: 0 auto;
   position: relative;
   border-radius: 20%;
   transition: 1s;
-  box-shadow: rgba(0,0,0,.7) 0px 4px 12px;
 }
 
 .card_box img{
