--- a/layout.phtml
+++ b/layout.phtml
@@ -4,22 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./assets/image/bizo.png" type="image">
+
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link href="./assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="./assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="./assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="./assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./assets/css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
-    <title>Bizo</title>
+    <title><?=$page_titel?></title>
 </head>
 <body>
-
-    <div class="preloader">
+<?php if(!isset($_SESSION['user_name']) && !isset($_SESSION['admin_name']) && !$show): ?>
+  
+  <div class="preloader">
         <p class="content-preloader">
            <span>B</span>
            <span>I</span>
@@ -81,9 +80,10 @@
                                         <h3>Join Us </h3>
                                         <div class="py-4 d-flex  justify-content-center">
                                             <div class="mx-4">
-                                            <a  href=""><button  class="btn">Sign In</button></a>
+                                              <a  href="./auth/login/ "><button  class="button">Sign In</button></a>
                                             </div>
-                                           <div  class=""> <a href=""><button class="btn">Sign Up</button></a>  
+                                           <div  class="">
+                                             <a href="./auth/signup/"><button class="button">Sign Up</button></a>  
                                           </div> 
                                         </div>
                                   </div>
@@ -285,40 +285,7 @@
     </div>
        </article>
 
-     <article class="thank py-4"  >
-        <div class="row container-fluid justify-content-center gap-5" data-aos="fade-down" data-aos-delay="500">
-            <h3 class="fw-bolder text-center"  data-aos="fade-down" data-aos-delay="400">I’m so grateful for your help. Thank you 🤍</h3>
-        <div class="container_box col-lg-6" >
-            <div class="card_box">
-                <img src="./assets/image/chlendi.jpg" alt="">
-            </div>
-    
-            <div class="content_box">
-                <h3 style="color:#4fc3dc">Mohamed youssef chelndi</h3>
-                <div class="all_link">
-                    <a class=" mx-2" href="#!"><i class="fa-brands fa-instagram"></i></a>
-                    <a class="  mx-2" href="#!"><i class="fa-brands fa-github"></i></a>
-                    <a class="  mx-2" href="#!" ><i class="fab fa-linkedin-in"></i></a>
-                  </div>
-            </div>
-        </div>
-
-        <div class="container_box  col-lg-6 ">
-            <div class="card_box">
-                <img src="./assets/image/sabrine.jpg" alt="">
-            </div>
-            <div class="content_box">
-                <h3 style="color:#ff2d75">Sabrine kamkoum</h3>
-                <div class="all_link">
-                    <a class=" mx-2" href="#!"><i class="fa-brands fa-instagram"></i></a>
-                    <a class="  mx-2" href="#!"><i class="fa-brands fa-github"></i></a>
-                    <a class="  mx-2" href="#!" ><i class="fab fa-linkedin-in"></i></a>
-                </div>
-            </div>
-        </div>
-
-    </div>
-      </article>
+     
 
       <article  class="py-2" data-aos="fade-up">
         <div class="container py-5">
@@ -331,10 +298,10 @@
                             <img class="rounded-circle img-thumbnail shadow-sm" width="30%" height="30%" src="./assets/image/talelmejri.jpg" alt="..." />
                             <h4>Talel Mejri</h4>
                             <p class="text-muted">Fllow Me.</p>
-                              <a class="btn   mx-2" href="#!"><i class="fa-brands fa-youtube"></i></a>
-                              <a class="btn   mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                              <a class="btn   mx-2" href="#!" ><i class="fab fa-facebook-f"></i></a>
-                              <a class="btn   mx-2" href="#!" ><i class="fab fa-linkedin-in"></i></a>
+                              <a class="button   mx-2" href="#!"><i class="fa-brands fa-youtube"></i></a>
+                              <a class="button   mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                              <a class="button   mx-2" href="#!" ><i class="fab fa-facebook-f"></i></a>
+                              <a class="button   mx-2" href="#!" ><i class="fab fa-linkedin-in"></i></a>
                    </div>
                 </div>
        </div>
@@ -409,6 +376,42 @@
                   </div>
        </article>
 
+       <article class="thank py-4"  >
+      
+        <h3 class="fw-bolder text-center"  data-aos="fade-down" data-aos-delay="400">I’m so grateful for your help. Thank you 🤍</h3>
+        <div class="row container-fluid justify-content-center gap-5 py-4" data-aos="fade-down" data-aos-delay="500">
+        <div class="container_box col-lg-5">
+        <div class="card_box">
+            <img src="./assets/image/chlendi.jpg" alt="">
+        </div>
+
+        <div class="content_box">
+            <h3 style="color:#4fc3dc">Mohamed youssef chelndi</h3>
+            <div class="all_link">
+                <a class=" mx-2" href="#!"><i class="fa-brands fa-instagram"></i></a>
+                <a class="  mx-2" href="#!"><i class="fa-brands fa-github"></i></a>
+                <a class="  mx-2" href="#!" ><i class="fab fa-linkedin-in"></i></a>
+              </div>
+        </div>
+    </div>
+
+    <div class="container_box col-lg-5  ">
+        <div class="card_box">
+            <img src="./assets/image/sabrine.jpg" alt="">
+        </div>
+        <div class="content_box">
+            <h3 style="color:#ff2d75">Sabrine kamkoum</h3>
+            <div class="all_link">
+                <a class=" mx-2" href="#!"><i class="fa-brands fa-instagram"></i></a>
+                <a class="  mx-2" href="#!"><i class="fa-brands fa-github"></i></a>
+                <a class="  mx-2" href="#!" ><i class="fab fa-linkedin-in"></i></a>
+            </div>
+        </div>
+    </div>
+
+  </div>
+  </article>
+
    </section>
 
    <footer data-aos="fade-down" class="container-fluid">
@@ -456,14 +459,19 @@
         </div>
       </div>
    </footer>
+
+   <?php endif;?>
+
+     <?php if($show): ?>
+     <?php include $template.".phtml"; ?>
+    <?php endif; ?>
+
     
 </body>
 
-<script src="./assets/vendor/aos/aos.js"></script>
 <script src="./assets/vendor/purecounter/purecounter_vanilla.js"></script>
+<script src="./assets/vendor/aos/aos.js"></script>
 <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 <script src="./assets/vendor/glightbox/js/glightbox.min.js"></script>
 <script src="./assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
 <script src="./assets/vendor/swiper/swiper-bundle.min.js"></script>
