--- a/auth/login/login.phtml
+++ b/auth/login/login.phtml
@@ -1,1 +1,87 @@
- loginn herererrererere
+<style>
+input{
+  height:60px;
+}
+img{
+  height:100%;
+  width:100%;
+}
+.fin{
+  font-size:22px;
+}
+
+</style>
+
+<div class="login">
+   <div class="d-flex justify-content-center py-3">
+        <button class="text-center btn btn-outline-info d-block"><a href="../../"><i class="fa-solid fa-house-user display-4"></i></a> </button>
+  </div>
+<div class="d-flex p-3 m-4 justify-content-center">   
+    <div class="col-xl-10 col-md-12 col-lg-12">
+          <div class="row shadow-lg rounded">
+                <div class="col-lg-6 d-none d-lg-block bg-secondary">
+                    <img src="../../assets/image/log.svg" alt="">
+                </div>
+                <div class=" col-lg-6 py-5">
+                      <div class="text-center">
+                        <h1 class="h4 text-gray-900 mb-5">Welcome Back !</h1>
+                      </div>
+                    <form action="<?=$_SERVER['PHP_SELF'] ?>" method="POST">
+                          <?php if(array_key_exists('type',$_GET)): ?>
+                              <div class="alert alert-<?=$_GET['type']?>" role="alert">
+                                 <?= $_GET['msg'] ?>
+                               </div>
+                          <?php endif;?>
+                      <div class="mb-4">
+                          <input  type="text" placeholder="Entrer Email Address..." name="email" class="form-control" id="exampleInputEmail1">
+                      </div>
+                      <div class="mb-5 ">
+                        <div class="input-group d-flex">
+                        <input type="password" id="pass" class="form-control" name="password" placeholder="Entrer Your Password">
+                         <span class="input-group-btn">
+                           <button id="changer_visible" class="btn btn-primary" type="button">
+                           <svg width="24" height="24" fill="none" viewBox="0 0 24 24" class="eye hidden">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19.25 12C19.25 13 17.5 18.25 12 18.25C6.5 18.25 4.75 13 4.75 12C4.75 11 6.5 5.75 12 5.75C17.5 5.75 19.25 11 19.25 12Z"></path>
+                                <circle cx="12" cy="12" r="2.25" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></circle>
+                            </svg>
+                            <svg width="24" height="24" fill="none" viewBox="0 0 24 24" class="eyeOff">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M18.6247 10C19.0646 10.8986 19.25 11.6745 19.25 12C19.25 13 17.5 18.25 12 18.25C11.2686 18.25 10.6035 18.1572 10 17.9938M7 16.2686C5.36209 14.6693 4.75 12.5914 4.75 12C4.75 11 6.5 5.75 12 5.75C13.7947 5.75 15.1901 6.30902 16.2558 7.09698"></path>
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19.25 4.75L4.75 19.25"></path>
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M10.409 13.591C9.53033 12.7123 9.53033 11.2877 10.409 10.409C11.2877 9.5303 12.7123 9.5303 13.591 10.409"></path>
+                            </svg> 
+                         </button>
+                        </span>
+                      </div> 
+                      </div>
+                          <button style="font-size:19px" type="submit" name="submit" class="btn btn-primary btn-block w-100 rounded-pill">Login</button>
+                      </form>
+                      <hr>
+                      <div class="fin text-center py-4 mb-1">
+                              <a class="small text-decoration-none" href="../forgotPassword">Forgot Password ?</a>
+                       </div>
+                       <div class="fin text-center">
+                              <a class="small text-decoration-none" href="../signup">Create an Account !</a>
+                      </div> 
+                </div>
+          </div>
+    </div>
+</div>
+</div>
+
+<script>
+    const pswd = document.getElementById('pass');
+let changer_visible=document.getElementById("changer_visible");
+const eye = document.querySelector('.eye');
+const eyeOff = document.querySelector('.eyeOff');
+      changer_visible.addEventListener("click",function(){
+      if(( pswd.type)=="password"){
+        pswd.type = 'text'; 
+        eyeOff.classList.add('hidden');
+        eye.classList.remove('hidden');
+      }else{
+        pswd.type='password';
+        eye.classList.add('hidden');
+        eyeOff.classList.remove('hidden');
+      }
+ })
+</script>
