--- a/layout.phtml
+++ b/layout.phtml
@@ -4,15 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link href="./assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="./assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="./assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-    <link href="./assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
+    <?php if($show==true): ?>
+      <link rel="stylesheet" href="../../assets/css/style.css">
+      <link href="../../assets/vendor/aos/aos.css" rel="stylesheet">
+      <link href="../../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+      <link href="../../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+      <link href="../../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+      <link href="../../assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+      <link href="../../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <?php else:?>
+      <link rel="stylesheet" href="./assets/css/style.css">
+      <link href="./assets/vendor/aos/aos.css" rel="stylesheet">
+      <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+      <link href="./assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+      <link href="./assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+      <link href="./assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+      <link href="./assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+      <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
+    <?php endif; ?>
     <title><?=$page_titel?></title>
 </head>
 <body>
@@ -474,9 +483,8 @@
    </footer>
 
    <?php endif;?>
-
-     <?php if($show): ?>
-     <?php include $template.".phtml"; ?>
+    <?php if($show): ?>
+         <?php include $template.".phtml"; ?>
     <?php endif; ?>
 
     
