--- a/layout.phtml
+++ b/layout.phtml
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./assets/image/logo_final.png" type="image/x-icon">
+    <link rel="stylesheet" href="">
     <?php if($show==true): ?>
       <link rel="stylesheet" href="../../assets/css/style.css">
+      <link rel="icon" href="../../assets/image/logo_final.png" type="image/x-icon">
       <link href="../../assets/vendor/aos/aos.css" rel="stylesheet">
       <link href="../../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
       <link href="../../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -13,6 +16,7 @@
       <link href="../../assets/vendor/remixicon/remixicon.css" rel="stylesheet">
       <link href="../../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <?php else:?>
+      <link rel="icon" href="./assets/image/logo_final.png" type="image/x-icon">
       <link rel="stylesheet" href="./assets/css/style.css">
       <link href="./assets/vendor/aos/aos.css" rel="stylesheet">
       <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -64,7 +68,7 @@
                     <span style="--i:28"></span>
                     <span style="--i:17"></span>
                  </div>
-                <a class="navbar-brand" href="##"><img src="./assets/image/bizo.png" width="50px" height="50px" alt=""> </a>
+                <a class="navbar-brand" href="##"><img src="./assets/image/logo_final.png" width="50px" height="50px" alt=""> </a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary  text-primary rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <i style="color:#4fc3dc" class="fas fa-bars"></i>
                 </button>
