--- a/layout.phtml
+++ b/layout.phtml
@@ -412,7 +412,7 @@
         </div>
 
         <div class="content_box">
-            <h3 style="color:#4fc3dc">Mohamed youssef chelndi</h3>
+            <h3 style="color:#4fc3dc">Mohamed youssef chlendi</h3>
             <div class="all_link">
                 <a class=" mx-2" href="#!"><i class="fa-brands fa-instagram"></i></a>
                 <a class="  mx-2" href="#!"><i class="fa-brands fa-github"></i></a>
