--- a/auth/signup/signup.phtml
+++ b/auth/signup/signup.phtml
@@ -1,1 +1,109 @@
-sign p hererererrer
+<style>
+  img{
+    height: 100%;
+    width: 100%;
+  }
+  
+</style>
+<div class="d-flex p-3 m-4 justify-content-center">   
+    <div class="col-xl-10 ">
+          <div class="row shadow-lg rounded">
+                <div class="col-lg-6">
+                        <div class="text-center">
+                           <h1 class="h4 fw-bolder mb-3 py-3">Sign Up</h1>
+                        </div>
+                    <form class="py-4" action="index.php" method="POST"  enctype="multipart/form-data">
+                 
+                    <?php if(array_key_exists('msg',$_GET)): ?>  
+                       <div class="alert alert-<?=$_GET['type']?>">
+                            <?=$_GET['msg'];?>
+                        </div>
+                        <?php endif; ?>
+                       <div class="row mb-4 ">
+                          <div class="col-lg-6">
+                            <label>Name</label>
+                            <input type="text" name="name" class="form-control " >
+                            <small class="text-danger" ><?= array_key_exists('name',$error) ? $error['name'] : '' ?></small>
+                          </div>
+                          <div class="col-lg-6">
+                            <label>Last Name</label>
+                            <input type="text" name="prenom" class="form-control ">
+                            <small class="text-danger" ><?= array_key_exists('prenom',$error) ? $error['prenom'] : '' ?></small>
+                          </div>
+                        </div>
+                        <div class="row mb-4">
+                          <div class="col-lg-12 mb-3">
+                            <label>Email</label>
+                            <input type="email" name="email" class="form-control ">
+                            <small class="text-danger" ><?= array_key_exists('email',$error) ? $error['email'] : '' ?></small>
+                          </div>
+                          <div class="col-lg-12">
+                          <label>Password </label>
+                        <div class="input-group">
+                        <input type="password" id="pass" class="form-control" name="password">
+                         <span class="input-group-btn">
+                           <button id="changer_visible" class="btn btn-primary" type="button">
+                           <svg width="24" height="24" fill="none" viewBox="0 0 24 24" class="eye hidden">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19.25 12C19.25 13 17.5 18.25 12 18.25C6.5 18.25 4.75 13 4.75 12C4.75 11 6.5 5.75 12 5.75C17.5 5.75 19.25 11 19.25 12Z"></path>
+                                <circle cx="12" cy="12" r="2.25" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></circle>
+                            </svg>
+                            <svg width="24" height="24" fill="none" viewBox="0 0 24 24" class="eyeOff">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M18.6247 10C19.0646 10.8986 19.25 11.6745 19.25 12C19.25 13 17.5 18.25 12 18.25C11.2686 18.25 10.6035 18.1572 10 17.9938M7 16.2686C5.36209 14.6693 4.75 12.5914 4.75 12C4.75 11 6.5 5.75 12 5.75C13.7947 5.75 15.1901 6.30902 16.2558 7.09698"></path>
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19.25 4.75L4.75 19.25"></path>
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M10.409 13.591C9.53033 12.7123 9.53033 11.2877 10.409 10.409C11.2877 9.5303 12.7123 9.5303 13.591 10.409"></path>
+                            </svg> 
+                         </button>
+                        </span>
+                      </div>  
+                      <small class="text-danger" ><?= array_key_exists('password',$error) ? $error['password'] : '' ?></small>
+                    </div>
+                      </div>
+                        <div class="row">
+                          <div class="col-lg-12">
+                            <label>Avatar</label>
+                            <input type="file" name="avatar" class="form-control ">
+                            <small class="text-danger" ><?= array_key_exists('file',$error) ? $error['file'] : '' ?></small>
+                          </div>
+                        </div>
+                           <div class="form-group text-center py-4">
+							          	<input type="checkbox"  name="agree" id="agree" class="custom-control-input">
+                      
+								          <label for="agree" class="custom-control-label">I agree to the <a href="#">Terms and Conditions</a></label>
+                         <br> <small class="text-danger" ><?= array_key_exists('agree',$error) ? $error['agree'] : '' ?></small>
+                        </div>
+                        <div class="text-center mt-2">
+                             <button name="signup" class="btn btn-outline-success">Sign Up</button>
+                        </div>
+                        <div class="mt-4 text-muted text-center">
+							             Already have an account ? <a href="../login">Login</a>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-lg-6 d-none d-lg-block ">
+                    <img src="../../assets/image/118046-lf20-oahmox5rjson.gif" alt="">
+                </div>
+          </div>
+          
+    </div>
+</div>
+
+<script>
+
+const pswd = document.getElementById('pass');
+let changer_visible=document.getElementById("changer_visible");
+const eye = document.querySelector('.eye');
+const eyeOff = document.querySelector('.eyeOff');
+      changer_visible.addEventListener("click",function(){
+      if(( pswd.type)=="password"){
+        pswd.type = 'text'; 
+        eyeOff.classList.add('hidden');
+        eye.classList.remove('hidden');
+      }else{
+        pswd.type='password';
+        eye.classList.add('hidden');
+        eyeOff.classList.remove('hidden');
+      }
+ })
+
+</script>
+
