--- a/auth/forgotPassword/forgotPassword.phtml
+++ b/auth/forgotPassword/forgotPassword.phtml
@@ -5,6 +5,7 @@
         height: 100%;
     }
 </style>
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <div class="container d-flex justify-content-center align-items-center">
 <div class="row shadow-lg mt-5">
      <div class="col-md-6 py-5 mt-4">
@@ -16,6 +17,11 @@
                      </div>
                   <?php endif;?>
                   <input type="email" class="form-control mb-4 mt-4" name="email" placeholder="Entrer votre email">
+                 
+                  <div class="text-center mb-2">
+                          <div class="g-recaptcha text-center" data-sitekey="6Ldl-BUjAAAAAFdE1e3w9KBQLPoPwBJWBWlCT7GE"></div>
+                  </div>
+
                   <div class="text-center mb-4">
                         <button name="suivant" class="btn btn-success">Suivant</button>
                   </div>
@@ -29,5 +35,15 @@
      </div>
 </div>
 </div>
+<script type="text/javascript">
+  var onloadCallback = function() {
+    alert("grecaptcha is ready!");
+  };
+</script>
+
+
+
+
+
 
 
