fix lotifiles in all page

--- a/auth/congrats/congrats.phtml
+++ b/auth/congrats/congrats.phtml
@@ -6,19 +6,19 @@
 </style>
 <div class="row">
 <div class="col-md-3 text-center py-3">
-        <img src="../../assets/image/124567-congrats.gif" alt="">
+
+<lottie-player src="https://assets3.lottiefiles.com/datafiles/U1I3rWEyksM9cCH/data.json"   speed="1"  style="width: 100%; height: 100%;"  loop  autoplay></lottie-player>
             </div>
-         <div class="col-md-6 py-4 text-center">
-              <h1 class="text-uppercase ">Congratulation <?=$name?>!</h1>
-              Your email has already been confirmed.
-               <p class="text-center">
-                  <img src="../../assets/image/5242-check-orange.gif" alt="">
-                </p>
+         <div class="col-md-6 py-4 text-center ">
+              <h1 class="text-uppercase text-success font-weight-bold">Congratulation <?=$name?>!</h1>
+                   <p class="lead">Your email has already been confirmed.</p> 
+               <p class="d-flex justify-content-center">
+                    <lottie-player src="https://assets1.lottiefiles.com/private_files/lf30_3ghvm6sn.json"   speed="1"  style="width: 70%; height: 70%;"  loop  autoplay></lottie-player>
+               </p>
                 <p class="lead">You Can now login to the application After 5 Secondes </p>
         </div>
-        <div class="col-md-3 text-center py-3">
-                 <img src="../../assets/image/74659-confetti-day.gif" alt="">
-        </div> 
+        <div class="col-md-3 text-center py-3 ">
+        <lottie-player src="https://assets3.lottiefiles.com/datafiles/U1I3rWEyksM9cCH/data.json"   speed="1"  style="width: 100%; height: 100%;"  loop  autoplay></lottie-player> </div> 
   </div>
   </div>
   </div>
