--- a/auth/forgotPassword/forgotPassword.phtml
+++ b/auth/forgotPassword/forgotPassword.phtml
@@ -7,6 +7,7 @@
 </style>
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <div class="container d-flex justify-content-center align-items-center">
+     <div class="col-xl-10">
 <div class="row shadow-lg mt-5">
      <div class="col-md-6 py-5 mt-4">
             <form action="index.php" method="post">
@@ -18,8 +19,8 @@
                   <?php endif;?>
                   <input type="email" class="form-control mb-4 mt-4" name="email" placeholder="Entrer votre email">
                  
-                  <div class="text-center mb-2">
-                          <div class="g-recaptcha text-center" data-sitekey="6Ldl-BUjAAAAAFdE1e3w9KBQLPoPwBJWBWlCT7GE"></div>
+                  <div class="d-flex justify-content-center mb-2">
+                          <div class="g-recaptcha " data-sitekey="6Ldl-BUjAAAAAFdE1e3w9KBQLPoPwBJWBWlCT7GE"></div>
                   </div>
 
                   <div class="text-center mb-4">
@@ -31,8 +32,9 @@
                   </div>
      </div>
      <div class="col-md-6 ">
-            <img src="../../assets/image/63004-profile-password-unlock.gif" alt="">
+     <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_z3pnisgt.json"   speed="1"  style="width: 100%; height: 100%;"  loop  autoplay></lottie-player>
      </div>
+</div>
 </div>
 </div>
 <script type="text/javascript">
