--- a/auth/login/login.phtml
+++ b/auth/login/login.phtml
@@ -10,6 +10,7 @@ img{
 
 </style>
 
+
 <div class="login">
    <div class="d-flex justify-content-center py-3">
         <button class="text-center btn btn-outline-info d-block"><a href="../../"><i class="fa-solid fa-house-user display-4"></i></a> </button>
@@ -18,7 +19,7 @@ img{
     <div class="col-xl-10 col-md-12 col-lg-12">
           <div class="row shadow-lg rounded">
                 <div class="col-lg-6 d-none d-lg-block ">
-                    <img src="../../assets/image/122140-log-in.gif" alt="">
+                   <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_mjlh3hcy.json"   speed="1"  style="width: 100%; height: 100%;"  loop  autoplay></lottie-player>
                 </div>
                 <div class=" col-lg-6 py-5">
                       <div class="text-center">
