--- a/layout.phtml
+++ b/layout.phtml
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/image/logo_final.png" type="image/x-icon">
-    <link rel="stylesheet" href="">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <?php if($show==true): ?>
       <link rel="stylesheet" href="../../assets/css/style.css">
       <link rel="icon" href="../../assets/image/logo_final.png" type="image/x-icon">
