--- a/auth/changerPassword/changerPassword.phtml
+++ b/auth/changerPassword/changerPassword.phtml
@@ -6,6 +6,7 @@
 </style>
 <form action="index.php" method="Post">
 <div class="container mt-5 py-5 d-flex justify-content-center">
+    <div class="col-xl-10">
 <div class="row shadow-lg">
     <?php if ($step) :?>
          <div class="col-md-6 text-center py-5">
@@ -17,17 +18,19 @@
                   <?php endif;?>
                   <input type="email" name="email" class="form-control mb-4" placeholder="Entrer votre email">
                   <input type="text" name="code" class="form-control mb-4" placeholder="****">
-                  <button name="Suivant" class="btn btn-success">Suivant</button>
+                  <button name="Suivant" class="btn btn-success mb-2">Suivant</button>
                   <div class="text-center">
-                       <a href="../login/"><button  class="btn btn-secondary">cancel</button> </a>
+                       <a href="/auth/login/"><button  class="btn btn-secondary">cancel</button> </a>
                   </div>
          </div>
          <div class="col-md-6">
-             <img src="../../assets/image/95530-password.gif" >
+         
+         <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_L7YrbxFm46.json"   speed="1"  style="width: 100%; height: 100%;"  loop  autoplay></lottie-player>
          </div>  
     <?php else: ?> 
         <div class="col-md-6">
-             <img src="../../assets/image/93270-password-lock-animation.gif" >
+             <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_msdmfngy.json"   speed="1"  style="width: 100%; height: 100%;"  loop  autoplay></lottie-player>
+
          </div>
          <div class="col-md-6 text-center py-5">
                   <h1 class="mb-5">Changer Password</h1>
@@ -39,12 +42,13 @@
                   <input type="hidden" name="id" value=<?=$id?>> 
                   <input type="password" name="password" class="form-control mb-4" placeholder="Nouveau Mot de passe">
                   <input type="password" name="confirm" class="form-control mb-4" placeholder="confirme Mot de passe">
-                  <button name="submit" class="btn btn-primary">Submit</button>
+                  <button name="submit" class="btn btn-primary mb-2">Submit</button>
                   <div class="text-center">
                        <a href="../login/"><button  class="btn btn-secondary">cancel</button> </a>
                   </div>
          </div>
     <?php endif; ?>
     </div> 
+    </div>
 </div>
   </form>
