--- a/auth/renvoyerToken/renvoyerToken.phtml
+++ b/auth/renvoyerToken/renvoyerToken.phtml
@@ -9,7 +9,7 @@
     <div class="col-xl-8 rounded shadow-lg">
         <div class="row">
             <div class="col-md-6">
-                 <img src="../../assets/image/38435-register.gif" >
+                 <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_dd9wpbrh.json"   speed="1"  style="width: 100%; height: 100%;"  loop  autoplay></lottie-player>
             </div>
             <div class="col-md-6 ">
     <form  class="py-5 mt-5 text-center" action="index.php" method="POST">
@@ -20,11 +20,12 @@
                 </div>
         <?php endif;?>
           <input type="email" class="form-control mb-2" name="email" placeholder="user@gmail.com">
-          <button name="submit" class="btn btn-outline-success">Renvoyer</button>
-    </form>
-     <div class="text-center">
+          <button name="submit" class="btn btn-outline-success mb-2">Renvoyer</button>
+          <div class="text-center">
           <a href="../login/"><button  class="btn btn-secondary">cancel</button> </a>
       </div>
+    </form>
+    
     </div>
     </div>
     </div>
