--- a/auth/signup/signup.phtml
+++ b/auth/signup/signup.phtml
@@ -80,7 +80,7 @@
                     </form>
                 </div>
                 <div class="col-lg-6 d-none d-lg-block ">
-                    <img src="../../assets/image/118046-lf20-oahmox5rjson.gif" alt="">
+                <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_q5pk6p1k.json"   speed="1"  style="width: 100%; height: 100%;"  loop  autoplay></lottie-player>
                 </div>
           </div>
           
