--- a/auth_layout.phtml
+++ b/auth_layout.phtml
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../assets/css/style.css">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
       <link rel="icon" href="../../assets/image/logo_final.png" type="image/x-icon">
       <link href="../../assets/vendor/aos/aos.css" rel="stylesheet">
       <link href="../../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
